2011-04-27  Mark Pilgrim  <pilgrim@chromium.org>

        Reviewed by Tony Chang.

        IndexedDB object store deleting entry should fail if key is null
        https://bugs.webkit.org/show_bug.cgi?id=58614

        * storage/indexeddb/mozilla: Added.
        * storage/indexeddb/mozilla/key-requirements-delete-null-key-expected.txt: Added.
        * storage/indexeddb/mozilla/key-requirements-delete-null-key.html: Added.

2011-04-27  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        audio-no-installed-engines.html media test has unnecessary pixel results
        https://bugs.webkit.org/show_bug.cgi?id=59456

        Convert audio-no-installed-engines.html results from pixel to text.

        * media/audio-no-installed-engines-expected.txt: Added.
        * media/audio-no-installed-engines.html:
        * platform/chromium-linux/media/audio-no-installed-engines-expected.png: Removed.
        * platform/chromium-win/media/audio-no-installed-engines-expected.png: Removed.
        * platform/chromium-win/media/audio-no-installed-engines-expected.txt: Removed.
        * platform/gtk/media/audio-no-installed-engines-expected.txt: Removed.
        * platform/mac-leopard/media/audio-no-installed-engines-expected.png: Removed.
        * platform/mac/media/audio-no-installed-engines-expected.png: Removed.
        * platform/mac/media/audio-no-installed-engines-expected.txt: Removed.

2011-04-27  Robert Hogan  <robert@webkit.org>

        Reviewed by Adam Barth.

        Allow shadowing of history object
        https://bugs.webkit.org/show_bug.cgi?id=55965

        * fast/dom/Window/get-set-properties-expected.txt:
        * fast/dom/Window/get-set-properties.html:
        * fast/dom/Window/window-property-shadowing-expected.txt:
        * fast/dom/Window/window-property-shadowing.html:
        * fast/js/var-declarations-shadowing-expected.txt:
        * fast/js/var-declarations-shadowing.html: