@@ -1,0 +1,26 @@
+Test IndexedDB's behavior adding and retrieving keys
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+indexedDB = window.indexedDB || window.webkitIndexedDB || window.mozIndexedDB;
+PASS indexedDB == null is false
+indexedDB.open(name, description)
+db = event.target.result
+request = db.setVersion('1')
+Deleted all object stores.
+objectStore = db.createObjectStore('foo', { autoIncrement: true });
+request = objectStore.add({});
+key1 = event.target.result;
+request = objectStore.put({}, key1);
+PASS event.target.result is key1
+key2 = 10;
+request = objectStore.put({}, key2);
+PASS event.target.result is key2
+key2 = 100;
+request = objectStore.put({}, key2);
+PASS event.target.result is key2
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
