@@ -2,6 +2,16 @@
 
         Reviewed by Tony Chang.
 
+        Port Mozilla's IndexedDB tests: event.target.result after add() and put()
+        https://bugs.webkit.org/show_bug.cgi?id=59634
+
+        * storage/indexeddb/mozilla/key-requirements-expected.txt: Added.
+        * storage/indexeddb/mozilla/key-requirements.html: Added.
+
+2011-04-27  Mark Pilgrim  <pilgrim@chromium.org>
+
+        Reviewed by Tony Chang.
+
         IndexedDB object store deleting entry should fail if key is null
         https://bugs.webkit.org/show_bug.cgi?id=58614
 
